--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
             "@php artisan key:generate --ansi"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
+            "@php artisan clear-compiled",
             "chmod -R 777 public/"
         ]
     }
