--- a/composer.json
+++ b/composer.json
@@ -57,9 +57,10 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "post-install-cmd": [
-            "@php artisan clear-compiled",
-            "chmod -R 777 public/"
+        "post-install-cmd":  [
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "chmod -R 777 app/storage"
         ]
     }
 }
